--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/subcategoriaAdmin.css">
+	<link rel="stylesheet" type="text/css" href="css/adminCJ/areaAdmin.css">
 
 	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/angular-route.min.js"></script>
