--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/subcategoriaAdmin.css">
+	<link rel="stylesheet" type="text/css" href="css/adminCJ/contaAdmin.css">
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/areaAdmin.css">
 
 	<script type="text/javascript" src="js/angular.min.js"></script>
@@ -24,6 +25,7 @@
 	<script type="text/javascript" src="js/controller/adminCJ/gruposAdminCJCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/adminCJ/categoriaAdminCJCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/adminCJ/subcategoriaAdminCJCtrl.js"></script>
+	<script type="text/javascript" src="js/controller/adminCJ/contaAdminCJCtrl.js"></script>
 
 	<script type="text/javascript" src="js/controller/adminCJ/editarCategoriaAdminCJCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/adminCJ/editarSubcategoriaAdminCJCtrl.js"></script>
