Imported controller file.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	<script type="text/javascript" src="js/controller/adminCJ/editarCategoriaAdminCJCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/adminCJ/editarSubcategoriaAdminCJCtrl.js"></script>
 	
+	<script type="text/javascript" src="js/controller/cadastroCtrl.js"></script>
+	
 	<script type="text/javascript" src="js/controller/inicialCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/configCtrl.js"></script>
 	<script type="text/javascript" src="js/angular-file-upload.min.js"></script>
