--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="jquery-ui-1.12.custom/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="css/estilofj.css">
+	<link rel="stylesheet" type="text/css" href="css/inicial.css">
 
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
