--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilofj.css">
 	<link rel="stylesheet" type="text/css" href="css/inicial.css">
 	<link rel="stylesheet" type="text/css" href="css/links.css">
+	<link rel="stylesheet" type="text/css" href="css/plano_de_contas.css">
 
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
