--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/links.css">
 	<link rel="stylesheet" type="text/css" href="css/plano_de_contas.css">
 	<link rel="stylesheet" type="text/css" href="css/importacao.css">
+	<link rel="stylesheet" type="text/css" href="css/contas_importadas.css">
 
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
@@ -38,6 +39,7 @@
 	<script type="text/javascript" src="js/controller/inicialCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/configCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/importacaoCtrl.js"></script>
+	<script type="text/javascript" src="js/controller/contas_importadasCtrl.js"></script>
 
 
 	<script type="text/javascript" src="js/angular-file-upload.min.js"></script>
