Refer css/relatorios.css and relatoriosCtrl.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/importacao.css">
 	<link rel="stylesheet" type="text/css" href="css/contas_importadas.css">
 	<link rel="stylesheet" type="text/css" href="css/login.css">
+	<link rel="stylesheet" type="text/css" href="css/relatorios.css">
 
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
@@ -41,6 +42,7 @@
 	<script type="text/javascript" src="js/controller/configCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/importacaoCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/contas_importadasCtrl.js"></script>
+	<script type="text/javascript" src="js/controller/relatoriosCtrl.js"></script>
 
 
 	<script type="text/javascript" src="js/angular-file-upload.min.js"></script>
