--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/contas_importadas.css">
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 	<link rel="stylesheet" type="text/css" href="css/relatorios.css">
+	<link rel="stylesheet" type="text/css" href="css/editar_conta_importada.css">
 
 
 	<link rel="stylesheet" type="text/css" href="css/adminCJ/categoriaAdmin.css">
@@ -35,6 +36,7 @@
 
 	<script type="text/javascript" src="js/controller/adminCJ/editarCategoriaAdminCJCtrl.js"></script>
 	<script type="text/javascript" src="js/controller/adminCJ/editarSubcategoriaAdminCJCtrl.js"></script>
+	<script type="text/javascript" src="js/controller/editar_conta_importadaCtrl.js"></script>
 	
 	<script type="text/javascript" src="js/controller/cadastroCtrl.js"></script>
 	
